# SOMCP

./: .gitignore  CHANGELOG.md  README.md  verify-native-libs.ps1
.github/workflows/: test.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/soreverse/mcp/blutter/: IBlutterRunner.aidl  IBlutterRunnerCallback.aidl
app/src/main/assets/blutter/: runners.json
app/src/main/cpp/: CMakeLists.txt  blutter_bridge.cpp  lief_elf.cpp
app/src/main/java/com/soreverse/mcp/: AiSettingsPage.kt  AnalyzeController.kt  AnalyzeDataAdapter.kt  AnalyzeTab.kt  AndroidUiUtils.kt  BasicSettingsPages.kt  DeepChatComponents.kt  ElfOverviewPanel.kt  ExternalLinks.kt  LogsTab.kt  MainActivity.kt  McpRuntimeAccess.kt  PortUtils.kt  ServiceTab.kt  SettingsApkBridgePage.kt  SettingsAppearancePage.kt  SettingsAuditPage.kt  SettingsBlutterPage.kt  SettingsCreditsPage.kt  SettingsHub.kt  SettingsServiceConfigPage.kt  SettingsStatsPages.kt  SettingsTunnelPage.kt  SettingsUpdatesPage.kt  ToolSummary.kt  UiComponents.kt  UiModels.kt  UpdateDownloadStatus.kt
app/src/main/java/com/soreverse/mcp/blutter/: BlutterRunnerService.kt  NativeBlutterBridge.kt
app/src/main/java/com/soreverse/mcp/core/: CloudflareTunnelManager.kt  DeepAnalysisService.kt  DeepReportStore.kt  GitHubUpdateManager.kt  SettingsStore.kt
app/src/main/java/com/soreverse/mcp/engine/: ApkAnalyzer.kt  BlutterCoordinator.kt  BlutterEmbeddedBackend.kt  BlutterResultStore.kt  BlutterRunnerRegistry.kt  DisasmCursorCodec.kt  ElfSectionResolver.kt  EngineJson.kt  EngineModels.kt  EngineRuntime.kt  EngineRuntimeBackendLief.kt  EngineRuntimeBackendRizin.kt  EngineRuntimeBackendUnidbg.kt  EngineRuntimeBlutter.kt  EngineRuntimeBuild.kt  EngineRuntimeEditPatch.kt  EngineRuntimeEditSession.kt  EngineRuntimeRead.kt  EngineRuntimeReports.kt  EngineRuntimeSources.kt  FlutterArtifactInspector.kt  FlutterModels.kt  LocatorParser.kt  NativeSoEngine.kt  PageStore.kt  PatchByteUtils.kt  Storage.kt
app/src/main/java/com/soreverse/mcp/mcp/: BatchExecution.kt  McpHttpServer.kt  ToolCatalog.kt  ToolCatalogPresentation.kt  ToolCatalogRegistry.kt  UnidbgBatchRunner.kt
app/src/main/java/com/soreverse/mcp/service/: McpForegroundService.kt
app/src/test/java/com/soreverse/mcp/: AnalyzeControllerTest.kt  RequestFieldsTest.kt
app/src/test/java/com/soreverse/mcp/engine/: ApkAnalyzerTest.kt  BlutterRunnerMatcherTest.kt  DisasmCursorCodecTest.kt  ElfSectionResolverTest.kt  LocatorParserTest.kt  PageStoreTest.kt  PatchByteUtilsTest.kt
app/src/test/java/com/soreverse/mcp/mcp/: BatchExecutionTest.kt  ToolCatalogRegistryTest.kt
docs/: blutter-backend.md
docs/releases/: 1.0.7.md
docs/schemas/: blutter-request.schema.json  blutter-result.schema.json
tools/blutter-matrix/: build_all.py  build_capstone_android.ps1  build_icu_android.sh  build_runner.py  curated-versions.json  generate_manifest.py  generate_matrix.py  matrix-config.json  prepare_build_plan.py  record_smoke.py  resolve_revisions.py  select_curated.py  test_matrix.py  verify_manifest.py
tools/blutter-matrix/android-runner/: CMakeLists.txt  android_runner.cpp  dart-app-accessors.patch
